fix(aboutmodal): hyperlink spacing

--- a/packages/ibm-products-styles/src/components/AboutModal/_about-modal.scss
+++ b/packages/ibm-products-styles/src/components/AboutModal/_about-modal.scss
@@ -71,8 +71,8 @@ $block-class: #{c4p-settings.$pkg-prefix}--about-modal;
 
 .#{$block-class} .#{$block-class}__links-container a + a {
   border-inline-start: 1px solid $border-strong-01;
-  margin-inline-start: $spacing-03;
-  padding-inline-start: $spacing-03;
+  margin-inline-start: $spacing-04;
+  padding-inline-start: $spacing-04;
 }
 
 .#{$block-class} .#{$block-class}__content,
